Fix mobile menu icon alignment

--- a/assets/base.css
+++ b/assets/base.css
@@ -3922,8 +3922,8 @@ font-style: normal;
   .header__icon--menu .icon-hamburger,
   .header__icon--menu .icon-close {
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 0 !important;
+    top: 0 !important;
     transform: none;
     width: 24px; /* Adjust to actual SVG size */
     height: 24px; /* Adjust to actual SVG size */
